--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .two-line-ellipsis {
+    @apply overflow-hidden text-ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* Limit to two lines */
+    -webkit-box-orient: vertical;
+  }
+}
+
 @layer components {
   /** Video Player */
   .player-wrapper {
